--- a/rclcpp_components/src/node_main.cpp.in
+++ b/rclcpp_components/src/node_main.cpp.in
@@ -46,8 +46,10 @@ int main(int argc, char * argv[])
       auto node_factory = loader->createInstance<rclcpp_components::NodeFactory>(clazz);
       auto wrapper = node_factory->create_node_instance(options);
       auto node = wrapper.get_node_base_interface();
+      auto node_timing_coordination_interface = wrapper.get_node_timing_coordination_interface();
       node_wrappers.push_back(wrapper);
       exec.add_node(node);
+      exec.add_node_timing_coordination(node_timing_coordination_interface);
     }
   }
   loaders.push_back(loader);
