--- a/rclcpp_components/src/node_main.cpp.in
+++ b/rclcpp_components/src/node_main.cpp.in
@@ -55,8 +55,10 @@ int main(int argc, char * argv[])
       }
       auto wrapper = node_factory->create_node_instance(options);
       auto node = wrapper.get_node_base_interface();
+      auto node_timing_interface = wrapper.get_node_timing_interface();
       node_wrappers.push_back(wrapper);
       exec.add_node(node);
+      exec.add_node_timing_interface(node_timing_interface);
     }
   }
   loaders.push_back(loader);
